--- a/Pong.CSharp.csproj
+++ b/Pong.CSharp.csproj
@@ -66,6 +66,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Ball.cs" />
+    <Compile Include="Assets\Player2Controls.cs" />
     <Compile Include="Assets\PlayerControl.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
