--- a/Pong.CSharp.csproj
+++ b/Pong.CSharp.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Assets\Ball.cs" />
     <Compile Include="Assets\Player2Controls.cs" />
     <Compile Include="Assets\PlayerControl.cs" />
+    <Compile Include="Assets\Score.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
 </Project>
